[package]
name = "cw20-base-demurrage"
version = "0.13.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Giuseppe Littera <giuseppe@informal.systems>"]
edition = "2022"
description = "Basic implementation of a CosmWasm-20 compliant token plus a demurrage function"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
abort = []


[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""


[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cosmwasm-std = { version = "1.1.0" }
cosmwasm-storage = { version = "1.1.0" }
cw-storage-plus = "0.16.0"
cw-utils = "0.16.0"
cw2 = "0.16.0"
cw20 = { path = "../../packages/cw20", version = "0.16.0" }

schemars = "0.8.11"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = {version = "1.0.85", default-features = false}
thiserror = { version = "1.0.37" }


[dev-dependencies]
cosmwasm-vm = "1.1.0"
cw-multi-test = "0.16.0"
